datasets/dataset_txt/pipenv/pipenv_888.txt
rcalvert commented on 30 Jun 2018 •
edited
Note: pipenv does work. This is only a minor nuisance.
I get the below message every time I run apt-get. Whether related to python or not...
Setting up pipenv (11.10.1-1) ...
  File "/usr/lib/python3/dist-packages/pipenv/vendor/jinja2/asyncfilters.py", line 24
    yield item
             ^
SyntaxError: 'yield' inside async function

  File "/usr/lib/python3/dist-packages/pipenv/vendor/jinja2/asyncsupport.py", line 35
    yield event
              ^
SyntaxError: 'yield' inside async function

dpkg: error processing package pipenv (--configure):
 subprocess installed post-installation script returned error exit status 1
A very shallow look into this yielded pallets/jinja#643
Oh, and this is on Windows WSL mode runningUbuntu Xenial